<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (C) 2016 The Android Open Source Project
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
         http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">Lair</string>
    <string name="camera_permission_confirmation">Lair uses facial recognition to keep your files safely locked, but in order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">This app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="take_picture">Recognize</string>
    <string name="add_person">Add</string>
    <string name="title_activity_add_person">AddPerson</string>
    <string name="appp_name">Lair</string>
    <string name="login_button">LOGIN</string>
    <string name="create_profile_button">CREATE PROFILE</string>
    <string name="create_pincode_button">CREATE PINCODE</string>
    <string name="train_model_button">TRAIN FACIAL RECOGNITION</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="zero_button">0</string>
    <string name="confirm_button">ENTER</string>
    <string name="new_pincode_button">CLEAR</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="title_activity_pincode">PincodeActivity</string>
    <string name="title_activity_train_model">TrainModelActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="file_menu_button">FILE MENU</string>
    <string name="title_activity_file_menu">FileMenuActivity</string>
    <string name="title_activity_file_view">FileViewActivity</string>
    <string name="file_menu_toast">Hello, World!</string>
    <string name="add_file_button">+FILE</string>
    <string name="add_folder_button">+FOLDER</string>
    <string name="del_file">-DELETE</string>
    <string name="profile_menu_button">PROFILE MENU</string>
    <string name="log_out_button">LOG OUT</string>
    <string name="update_pincode_button">UPDATE PINCODE</string>
    <string name="update_facial_recognition_button">UPDATE FACIAL RECOGNITION</string>
    <string name="delete_profile_button">DELETE PROFILE</string>
    <string name="file2_menu_button">FILE MENU</string>
    <string name="clear_button">CLEAR</string>
</resources>
