<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="horizontal"
    android:layout_gravity="center">


    <Button
        android:id="@+id/log_out_button"
        android:layout_width="128dp"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp"
        android:background="@color/red_pastel"
        android:padding="10dp"
        android:text="@string/log_out_button"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/update_facial_recognition_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/update_facial_recognition_button"
        android:background="@color/primaryDark"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <Button
        android:id="@+id/update_pincode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/update_facial_recognition_button"
        android:layout_marginTop="75dp"
        android:text="@string/update_pincode_button"
        android:background="@color/primaryDark"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <Button
        android:id="@+id/delete_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/update_facial_recognition_button"
        android:layout_marginTop="135dp"
        android:background="@color/red_pastel"
        android:padding="10dp"
        android:text="@string/delete_profile_button"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/file2_menu_button"
        android:layout_width="170dp"
        android:layout_height="91dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:text="@string/file2_menu_button"
        android:background="@color/primaryDark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="10dp"/>
</RelativeLayout>
